# rust-template

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: license_header.rs
.github/workflows/: pr-title-linter.yml  release-plz.yml  rust.yml
src/: lib.rs  main.rs
tests/: integration.rs
